public class Krieger {
     int ausdauer;
     int angriffswert;
     int ausdauer;

    public  Krieger(int ausdauer, int angriffswert, int ausdauer) {

        this.ausdauer = ausdauer
        this.angriffswert = angriffswert
        this.ausdauer = ausdauer
    }

      Krieger(String name, int stärke, int lebenspunkte, int angriffswert, int ausdauer) {}
      Krieger(String name) {}
     int getAngriffswert() {}
}
