public class Würfel {
     int augen;

    public  Würfel(int augen) {

        this.augen = augen
    }

      Würfel(int augen) {}
     int würfeln() {}
}
