public class Zauberer {
     int zauberkraft;

    public  Zauberer(int zauberkraft) {

        this.zauberkraft = zauberkraft
    }

     stat name() {}
     int getAngriffswert() {}
     void heilen(Held held) {}
}
